# memory-mcp

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: claude-code.md  cursor.md  docker.md  gemini-cli.md  github-to-render-deploy.md  installation.md  npm.md  render.md
docs/auth/: README.md
documentation/: mcp.md
examples/: mcp-configs.json  remote-mcp-configs.json  workflows.md
scripts/: postinstall.js
src/openmemory_mcp/: __init__.py  __main__.py  cli.py  server.py
src/openmemory_mcp/config/: __init__.py  settings.py
src/openmemory_mcp/memory/: __init__.py  embeddings.py
src/openmemory_mcp/models/: __init__.py  schemas.py
src/openmemory_mcp/services/: __init__.py  memory_service.py
src/openmemory_mcp/storage/: __init__.py  database.py  orm.py  repositories.py
src/openmemory_mcp/utils/: validation.py
tests/: test_auth.py  test_memory_service.py  test_server.py
