[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openmemory-mcp"
version = "0.1.0"
description = "Local-first MCP memory server for AI coding assistants and agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenMemory MCP Contributors" }]
keywords = ["mcp", "memory", "ai-agents", "fastmcp", "sqlite", "postgresql"]
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
openai = ["openai>=1.60"]
gemini = ["google-genai>=1.0"]
local = ["sentence-transformers>=3.0"]
dev = [
"pytest>=8.0",
"pytest-asyncio>=0.24",
"ruff>=0.8",
"requests>=2.31",
]
[project.scripts]
openmemory-mcp = "openmemory_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openmemory_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
